--- a/YourTube/views/layouts/main.pug
+++ b/YourTube/views/layouts/main.pug
@@ -1,11 +1,10 @@
 doctype html
 html
     head
-        title | YourTube
+        link(rel="stylesheet", href="https://use.fontawesome.com/releases/v5.6.3/css/all.css", integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/", crossorigin="anonymous")
+        title Home | #{siteName}
     body
-        header
-            h1 YourTube
+        include ../partials/header 
         main
             block content
-        footer
-            span &copy; YourTube 
+        include ../partials/footer 
