--- a/YourTube/views/home.pug
+++ b/YourTube/views/home.pug
@@ -2,9 +2,9 @@ extends layouts/main
 include mixins/videoBlock
 
 block content
-    .videos
+    .home-videos
         each item in videos
-          +videoBlock({
+            +videoBlock({
                 id:item.id,
                 title:item.title,
                 views:item.views,
