--- a/YourTube/views/search.pug
+++ b/YourTube/views/search.pug
@@ -2,13 +2,15 @@ extends layouts/main
 include mixins/videoBlock
 
 block content
-    p Search 
     .search__header
         h3 Searching for: #{searchingBy} 
     .search__videos
+        if videos.length === 0
+            h5 No Videos Found
         each item in videos
             +videoBlock({
                 title:item.title,
                 views:item.views,
-                videoFile:item.videoFile
+                videoFile:item.videoFile,
+                id:item.id
             })     
